Fixed scrolling song list on firefox

--- a/src/components/app/style.scss
+++ b/src/components/app/style.scss
@@ -27,5 +27,6 @@ ul {
     flex-flow: column;
     flex-grow: 1;
     overflow: hidden;
+    height: 100%;
 }
 
